--- a/style.css
+++ b/style.css
@@ -20,17 +20,18 @@ h1 {
 /* フロアマップ全体を配置するための設定 */
 .seat-container {
     position: relative;
-    width: 90vw; /* 画面幅の95%に設定 */
-    height: 90vh; /* 画面高さの95%に設定 */
+    width: 95vw; /* 画面幅の95%に設定 */
+    height: 95vh; /* 画面高さの95%に設定 */
     border: 2px solid #333;
     background-color: #f0f0f0;
 }
 
 .seat {
-    /* テーブルのサイズもvhとvwで調整 */
-    width: 10vw;
-    height: 6vh;
+    width: 10vw;  /* 幅を画面幅の10%に設定 */
+    height: 6vh;  /* 高さを画面高さの6%に設定 */
     /* その他の設定はそのまま */
+    font-size: 2vw; /* 文字の大きさも画面幅に合わせて調整 */
+    position: absolute;
 }
 .seat {
     width: 100px;
@@ -62,18 +63,18 @@ h1 {
 
 /* ここから各テーブルの位置を個別に設定 */
 #table1 {
-    top: 480px;
-    left: 850px;
+    top: 480vh;
+    left: 850vw;
 }
 
 #table2 {
-    top: 360px;
-    left: 850px;
+    top: 360vh;
+    left: 850vw;
 }
 
 #table3 {
-    top: 240px;
-    left: 850px;
+    top: 240vh;
+    left: 850vw;
 }
 
 #table4 {
